src/gen/DLParser.cpp
/*
 * Copyright (c) 2018, 2019, Oracle and/or its affiliates. All rights reserved.
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License, version 2.0,
 * as published by the Free Software Foundation.
 *
 * This program is also distributed with certain software (including
 * but not limited to OpenSSL) that is licensed under separate terms, as
 * designated in a particular file or component or in included license
 * documentation. The authors of MySQL hereby grant you an additional
 * permission to link the program and your derivative works with the
 * separately licensed software that they have included with MySQL.
 * This program is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See
 * the GNU General Public License, version 2.0, for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software Foundation, Inc.,
 * 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
 */


// Generated from DLParser.g4 by ANTLR 4.7.2


#include "DLParserListener.h"
#include "DLParserVisitor.h"

#include "DLParser.h"




using namespace antlrcpp;
using namespace antlr4;

DLParser::DLParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

DLParser::~DLParser() {
  delete _interpreter;
}

std::string DLParser::getGrammarFileName() const {
  return "DLParser.g4";
}

const std::vector<std::string>& DLParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& DLParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ExpContext ------------------------------------------------------------------

DLParser::ExpContext::ExpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DLParser::ExpContext::CONST() {
  return getToken(DLParser::CONST, 0);
}

DLParser::ExpPostContext* DLParser::ExpContext::expPost() {
  return getRuleContext<DLParser::ExpPostContext>(0);
}

tree::TerminalNode* DLParser::ExpContext::IDENTIFIER() {
  return getToken(DLParser::IDENTIFIER, 0);
}

tree::TerminalNode* DLParser::ExpContext::QUOTED_STRING() {
  return getToken(DLParser::QUOTED_STRING, 0);
}

tree::TerminalNode* DLParser::ExpContext::OPEN_PAR_SYMBOL() {
  return getToken(DLParser::OPEN_PAR_SYMBOL, 0);
}

DLParser::ExpContext* DLParser::ExpContext::exp() {
  return getRuleContext<DLParser::ExpContext>(0);
}

tree::TerminalNode* DLParser::ExpContext::CLOSE_PAR_SYMBOL() {
  return getToken(DLParser::CLOSE_PAR_SYMBOL, 0);
}

DLParser::UnAryOpContext* DLParser::ExpContext::unAryOp() {
  return getRuleContext<DLParser::UnAryOpContext>(0);
}

DLParser::NewExpContext* DLParser::ExpContext::newExp() {
  return getRuleContext<DLParser::NewExpContext>(0);
}


size_t DLParser::ExpContext::getRuleIndex() const {
  return DLParser::RuleExp;
}

void DLParser::ExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExp(this);
}

void DLParser::ExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExp(this);
}


antlrcpp::Any DLParser::ExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitExp(this);
  else
    return visitor->visitChildren(this);
}

DLParser::ExpContext* DLParser::exp() {
  ExpContext *_localctx = _tracker.createInstance<ExpContext>(_ctx, getState());
  enterRule(_localctx, 0, DLParser::RuleExp);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(78);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DLParser::CONST: {
        enterOuterAlt(_localctx, 1);
        setState(60);
        match(DLParser::CONST);
        setState(61);
        expPost();
        break;
      }

      case DLParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 2);
        setState(62);
        match(DLParser::IDENTIFIER);
        setState(63);
        expPost();
        break;
      }

      case DLParser::QUOTED_STRING: {
        enterOuterAlt(_localctx, 3);
        setState(64);
        match(DLParser::QUOTED_STRING);
        setState(65);
        expPost();
        break;
      }

      case DLParser::OPEN_PAR_SYMBOL: {
        enterOuterAlt(_localctx, 4);
        setState(66);
        match(DLParser::OPEN_PAR_SYMBOL);
        setState(67);
        exp();
        setState(68);
        match(DLParser::CLOSE_PAR_SYMBOL);
        setState(69);
        expPost();
        break;
      }

      case DLParser::LOGICAL_NOT_OPERATOR:
      case DLParser::BITWISE_NOT_OPERATOR:
      case DLParser::BITWISE_AND_OPERATOR: {
        enterOuterAlt(_localctx, 5);
        setState(71);
        unAryOp();
        setState(72);
        exp();
        setState(73);
        expPost();
        break;
      }

      case DLParser::NEW_SYMBOL: {
        enterOuterAlt(_localctx, 6);
        setState(75);
        newExp();
        setState(76);
        expPost();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpPostContext ------------------------------------------------------------------

DLParser::ExpPostContext::ExpPostContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DLParser::ExpPostContext::OPEN_SQUARE_SYMBOL() {
  return getToken(DLParser::OPEN_SQUARE_SYMBOL, 0);
}

DLParser::ExpListContext* DLParser::ExpPostContext::expList() {
  return getRuleContext<DLParser::ExpListContext>(0);
}

tree::TerminalNode* DLParser::ExpPostContext::CLOSE_SQUARE_SYMBOL() {
  return getToken(DLParser::CLOSE_SQUARE_SYMBOL, 0);
}

DLParser::ExpPostContext* DLParser::ExpPostContext::expPost() {
  return getRuleContext<DLParser::ExpPostContext>(0);
}

DLParser::ExpContext* DLParser::ExpPostContext::exp() {
  return getRuleContext<DLParser::ExpContext>(0);
}

tree::TerminalNode* DLParser::ExpPostContext::AT_SIGN_SYMBOL() {
  return getToken(DLParser::AT_SIGN_SYMBOL, 0);
}

tree::TerminalNode* DLParser::ExpPostContext::IDENTIFIER() {
  return getToken(DLParser::IDENTIFIER, 0);
}

tree::TerminalNode* DLParser::ExpPostContext::OPEN_PAR_SYMBOL() {
  return getToken(DLParser::OPEN_PAR_SYMBOL, 0);
}

tree::TerminalNode* DLParser::ExpPostContext::CLOSE_PAR_SYMBOL() {
  return getToken(DLParser::CLOSE_PAR_SYMBOL, 0);
}

tree::TerminalNode* DLParser::ExpPostContext::DOT_SYMBOL() {
  return getToken(DLParser::DOT_SYMBOL, 0);
}

DLParser::AryOpContext* DLParser::ExpPostContext::aryOp() {
  return getRuleContext<DLParser::AryOpContext>(0);
}


size_t DLParser::ExpPostContext::getRuleIndex() const {
  return DLParser::RuleExpPost;
}

void DLParser::ExpPostContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpPost(this);
}

void DLParser::ExpPostContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpPost(this);
}


antlrcpp::Any DLParser::ExpPostContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitExpPost(this);
  else
    return visitor->visitChildren(this);
}

DLParser::ExpPostContext* DLParser::expPost() {
  ExpPostContext *_localctx = _tracker.createInstance<ExpPostContext>(_ctx, getState());
  enterRule(_localctx, 2, DLParser::RuleExpPost);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(116);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(80);
      match(DLParser::OPEN_SQUARE_SYMBOL);
      setState(81);
      expList();
      setState(82);
      match(DLParser::CLOSE_SQUARE_SYMBOL);
      setState(83);
      expPost();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(85);
      match(DLParser::OPEN_SQUARE_SYMBOL);
      setState(86);
      match(DLParser::CLOSE_SQUARE_SYMBOL);
      setState(87);
      expPost();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(88);
      match(DLParser::OPEN_SQUARE_SYMBOL);
      setState(89);
      exp();
      setState(90);
      match(DLParser::CLOSE_SQUARE_SYMBOL);
      setState(91);
      expPost();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(93);
      match(DLParser::AT_SIGN_SYMBOL);
      setState(94);
      match(DLParser::IDENTIFIER);
      setState(95);
      match(DLParser::OPEN_PAR_SYMBOL);
      setState(96);
      expList();
      setState(97);
      match(DLParser::CLOSE_PAR_SYMBOL);
      setState(98);
      expPost();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(100);
      match(DLParser::OPEN_PAR_SYMBOL);
      setState(101);
      expList();
      setState(102);
      match(DLParser::CLOSE_PAR_SYMBOL);
      setState(103);
      expPost();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(105);
      match(DLParser::OPEN_PAR_SYMBOL);
      setState(106);
      match(DLParser::CLOSE_PAR_SYMBOL);
      setState(107);
      expPost();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(108);
      match(DLParser::DOT_SYMBOL);
      setState(109);
      match(DLParser::IDENTIFIER);
      setState(110);
      expPost();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(111);
      aryOp();
      setState(112);
      exp();
      setState(113);
      expPost();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);

      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AryOpContext ------------------------------------------------------------------

DLParser::AryOpContext::AryOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DLParser::AryOpContext::PLUS_OPERATOR() {
  return getToken(DLParser::PLUS_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::MINUS_OPERATOR() {
  return getToken(DLParser::MINUS_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::MULT_OPERATOR() {
  return getToken(DLParser::MULT_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::DIV_OPERATOR() {
  return getToken(DLParser::DIV_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::MOD_OPERATOR() {
  return getToken(DLParser::MOD_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::ASSIGN_OPERATOR() {
  return getToken(DLParser::ASSIGN_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::EQUAL_OPERATOR() {
  return getToken(DLParser::EQUAL_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::LOGICAL_AND_OPERATOR() {
  return getToken(DLParser::LOGICAL_AND_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::LOGICAL_OR_OPERATOR() {
  return getToken(DLParser::LOGICAL_OR_OPERATOR, 0);
}


size_t DLParser::AryOpContext::getRuleIndex() const {
  return DLParser::RuleAryOp;
}

void DLParser::AryOpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAryOp(this);
}

void DLParser::AryOpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAryOp(this);
}


antlrcpp::Any DLParser::AryOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitAryOp(this);
  else
    return visitor->visitChildren(this);
}

DLParser::AryOpContext* DLParser::aryOp() {
  AryOpContext *_localctx = _tracker.createInstance<AryOpContext>(_ctx, getState());
  enterRule(_localctx, 4, DLParser::RuleAryOp);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    _la = _input->LA(1);
    if (!(((((_la - 383) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 383)) & ((1ULL << (DLParser::ASSIGN_OPERATOR - 383))
      | (1ULL << (DLParser::EQUAL_OPERATOR - 383))
      | (1ULL << (DLParser::PLUS_OPERATOR - 383))
      | (1ULL << (DLParser::MINUS_OPERATOR - 383))
      | (1ULL << (DLParser::MULT_OPERATOR - 383))
      | (1ULL << (DLParser::DIV_OPERATOR - 383))
      | (1ULL << (DLParser::MOD_OPERATOR - 383))
      | (1ULL << (DLParser::LOGICAL_AND_OPERATOR - 383))
      | (1ULL << (DLParser::LOGICAL_OR_OPERATOR - 383)))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnAryOpContext ------------------------------------------------------------------

DLParser::UnAryOpContext::UnAryOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DLParser::UnAryOpContext::BITWISE_AND_OPERATOR() {
  return getToken(DLParser::BITWISE_AND_OPERATOR, 0);
}

tree::TerminalNode* DLParser::UnAryOpContext::LOGICAL_NOT_OPERATOR() {
  return getToken(DLParser::LOGICAL_NOT_OPERATOR, 0);
}

tree::TerminalNode* DLParser::UnAryOpContext::BITWISE_NOT_OPERATOR() {
  return getToken(DLParser::BITWISE_NOT_OPERATOR, 0);
}


size_t DLParser::UnAryOpContext::getRuleIndex() const {
  return DLParser::RuleUnAryOp;
}

void DLParser::UnAryOpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnAryOp(this);
}

void DLParser::UnAryOpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnAryOp(this);
}


antlrcpp::Any DLParser::UnAryOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitUnAryOp(this);
  else
    return visitor->visitChildren(this);
}

DLParser::UnAryOpContext* DLParser::unAryOp() {
  UnAryOpContext *_localctx = _tracker.createInstance<UnAryOpContext>(_ctx, getState());
  enterRule(_localctx, 6, DLParser::RuleUnAryOp);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    _la = _input->LA(1);
    if (!(((((_la - 396) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 396)) & ((1ULL << (DLParser::LOGICAL_NOT_OPERATOR - 396))
      | (1ULL << (DLParser::BITWISE_NOT_OPERATOR - 396))
      | (1ULL << (DLParser::BITWISE_AND_OPERATOR - 396)))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NewExpContext ------------------------------------------------------------------

DLParser::NewExpContext::NewExpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DLParser::NewExpContext::NEW_SYMBOL() {
  return getToken(DLParser::NEW_SYMBOL, 0);
}

tree::TerminalNode* DLParser::NewExpContext::IDENTIFIER() {
  return getToken(DLParser::IDENTIFIER, 0);
}

tree::TerminalNode* DLParser::NewExpContext::OPEN_PAR_SYMBOL() {
  return getToken(DLParser::OPEN_PAR_SYMBOL, 0);
}

tree::TerminalNode* DLParser::NewExpContext::CLOSE_PAR_SYMBOL() {
  return getToken(DLParser::CLOSE_PAR_SYMBOL, 0);
}

DLParser::ExpListContext* DLParser::NewExpContext::expList() {
  return getRuleContext<DLParser::ExpListContext>(0);
}


size_t DLParser::NewExpContext::getRuleIndex() const {
  return DLParser::RuleNewExp;
}

void DLParser::NewExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNewExp(this);
}

void DLParser::NewExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNewExp(this);
}


antlrcpp::Any DLParser::NewExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitNewExp(this);
  else
    return visitor->visitChildren(this);
}

DLParser::NewExpContext* DLParser::newExp() {
  NewExpContext *_localctx = _tracker.createInstance<NewExpContext>(_ctx, getState());
  enterRule(_localctx, 8, DLParser::RuleNewExp);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(132);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(122);
      match(DLParser::NEW_SYMBOL);
      setState(123);
      match(DLParser::IDENTIFIER);
      setState(124);
      match(DLParser::OPEN_PAR_SYMBOL);
      setState(125);
      match(DLParser::CLOSE_PAR_SYMBOL);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(126);
      match(DLParser::NEW_SYMBOL);
      setState(127);
      match(DLParser::IDENTIFIER);
      setState(128);
      match(DLParser::OPEN_PAR_SYMBOL);
      setState(129);
      expList();
      setState(130);
      match(DLParser::CLOSE_PAR_SYMBOL);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpListContext ------------------------------------------------------------------

DLParser::ExpListContext::ExpListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DLParser::ExpContext* DLParser::ExpListContext::exp() {
  return getRuleContext<DLParser::ExpContext>(0);
}

tree::TerminalNode* DLParser::ExpListContext::COMMA_SYMBOL() {
  return getToken(DLParser::COMMA_SYMBOL, 0);
}

DLParser::ExpListContext* DLParser::ExpListContext::expList() {
  return getRuleContext<DLParser::ExpListContext>(0);
}


size_t DLParser::ExpListContext::getRuleIndex() const {
  return DLParser::RuleExpList;
}

void DLParser::ExpListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpList(this);
}

void DLParser::ExpListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpList(this);
}


antlrcpp::Any DLParser::ExpListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitExpList(this);
  else
    return visitor->visitChildren(this);
}

DLParser::ExpListContext* DLParser::expList() {
  ExpListContext *_localctx = _tracker.createInstance<ExpListContext>(_ctx, getState());
  enterRule(_localctx, 10, DLParser::RuleExpList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(139);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(134);
      exp();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(135);
      exp();
      setState(136);
      match(DLParser::COMMA_SYMBOL);
      setState(137);
      expList();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

DLParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DLParser::StatementContext::IF_SYMBOL() {
  return getToken(DLParser::IF_SYMBOL, 0);
}

tree::TerminalNode* DLParser::StatementContext::OPEN_PAR_SYMBOL() {
  return getToken(DLParser::OPEN_PAR_SYMBOL, 0);
}

std::vector<DLParser::ExpContext *> DLParser::StatementContext::exp() {
  return getRuleContexts<DLParser::ExpContext>();
}

DLParser::ExpContext* DLParser::StatementContext::exp(size_t i) {
  return getRuleContext<DLParser::ExpContext>(i);
}

tree::TerminalNode* DLParser::StatementContext::CLOSE_PAR_SYMBOL() {
  return getToken(DLParser::CLOSE_PAR_SYMBOL, 0);
}

std::vector<DLParser::CompoundBlockContext *> DLParser::StatementContext::compoundBlock() {
  return getRuleContexts<DLParser::CompoundBlockContext>();
}

DLParser::CompoundBlockContext* DLParser::StatementContext::compoundBlock(size_t i) {
  return getRuleContext<DLParser::CompoundBlockContext>(i);
}

tree::TerminalNode* DLParser::StatementContext::ELSE_SYMBOL() {
  return getToken(DLParser::ELSE_SYMBOL, 0);
}
